# taijios-bundle

./: .gitignore  ABOUT.md  CHANGELOG.md  MANIFEST.md  README.md  SECURITY.md  START_HERE.md  api_server.py  brain.py  doctor.py  embed.py  heartbeat.py  heartbeat_daemon.py  hud.html  imagegen.py  install_scheduler.py  mcp_server.py  requirements.txt  setup.bat  setup.py  taijios.py  tts.py  uninstall.py  vision.py
TaijiOS/taijios-soul/: README.md  pyproject.toml  quickstart.py
TaijiOS/taijios-soul/tests/: test_soul_basic.py
self-improving-loop/: .gitignore  README.md  SHOW_HN_DRAFT.md  pyproject.toml
self-improving-loop/benchmarks/: overhead.py
self-improving-loop/self_improving_loop/: core.py  notifier.py  threshold.py
self-improving-loop/tests/: test_rollback_integration.py  test_smoke.py
taiji/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FOCUS.md  LICENSE  OPTIMIZATION_BACKLOG.md  Procfile  README.md  SECURITY.md  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  test_e2e_full_pipeline.py
taiji/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
taiji/.github/workflows/: ci.yml
taiji/aios/: __init__.py  aios.py  run_aios.py
taiji/aios/agent_system/: __init__.py  agent_lifecycle_engine.py  agent_state_machine.py  auth.py  auto_dispatcher.py  circuit_breaker.py  daily_metrics.py  dynamic_registry.py  evolution.py  evolution_heartbeat.py  execution_logger.py  experience_engine.py  experience_learner_v4.py  health_check.py  hexagram_mapping.py  ising_core.py  ising_heartbeat.py  llm_caller.py  meta_agent.py  paths.py  rbac.py  secret_manager.py  self_evolution_agent.py  skill_drafter.py  structured_logger.py  task_executor.py  task_queue.py  task_router.py  unified_registry.py
taiji/aios/core/: MODEL_ROUTER.md  REACTOR_V2_REPORT.md  ROADMAP_WEEK1_REPORT.md  SCHEDULER_V2_1_REPORT.md  SCHEDULER_V2_2_REPORT.md  __init__.py  action_engine.py  agent_arena.py  agent_state_machine.py  app_alias.py  auto_intelligence.py  budget.py  circuit_breaker.py  config.py  deadloop_breaker.py  decision_log.py  demo_semporna_travel.py  demo_travel_planner.py  dispatcher.py  engine.py  event.py  event_bus.py  event_bus_optimized.py  event_store.py  evolution.py  executor.py  feedback_loop.py  integrations.py  intent_recognizer.py  isolated_event_store.py  kyoto_travel_plan.txt  learning_analyzer.py  learning_workflow.py  llm.py  llm_helper.py  memory.py  model_config.py  model_router.py  model_router_v2.py  notification_handler.py  (+58 more)
taiji/aios/gateway/: __init__.py  __main__.py  app.py  audit.py  auth.py  client.py  config.py  errors.py  gate.py  metrics.py  policy.py  providers.py  router.py  (+3 more)
taiji/docs/: architecture.md
taiji/examples/: quickstart_minimal.py
taiji/match_analysis/: .gitignore  DATA_OPS.md  GUIDE.md  README.md  config.py  main.py  models.py  requirements.txt  stress_test.py
taiji/rpa_vision/: CLOSURE_REPORT.md  CONTROLLED_EXECUTION_SPEC.md  OBSERVATION_PERIOD_CONFIG.md  PROJECT_STATUS.md  SAFE_CLICK_CLOSURE_FINAL.md  SAFE_CLICK_VALIDATION_REPORT.md  main.py  requirements.txt  round1_browser_validation.py  round2_editor_validation.py  safe_click_validator.py  smoke_test.py  test_bbox_fix.py  test_real_ocr.py
taiji/rules/: git-workflow.md  security.md  testing.md
taiji/self_improving_loop/: LICENSE  README.md
taiji/skill_auto_creation/: PREPARATION_COMPLETE_REPORT.md  README.md
taiji/taijios-lite/: .dockerignore  .env.example  Dockerfile  api_server.py  bot_core.py  bot_feishu.py  bot_telegram.py  docker-compose.yml  model_router.py  model_watcher.py  multi_llm.py  requirements.txt  settings.py  taijios.py  test_64rounds.py  test_cross_validate.py
taiji/tests/: test_install.py  test_quickstart.py
taiji/tools/: simple_tts.py  tts_speaker.py
taiji/worker/: __init__.py  __main__.py
(+168 files in other folders)
