[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "self-improving-loop"
version = "0.1.0"
description = "A safety-first self-improvement loop for AI agents: execute → track → analyze → auto-apply → auto-rollback on regression."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "TaijiOS maintainers", email = "noreply@example.invalid" },
]
keywords = [
    "ai-agent",
    "self-improving",
    "feedback-loop",
    "auto-rollback",
    "adaptive-threshold",
    "agent-evolution",
    "llm-tooling",
    "taijios",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
telegram = ["requests>=2.28"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/yangfei222666-9/self-improving-loop"
Repository = "https://github.com/yangfei222666-9/self-improving-loop"
Issues = "https://github.com/yangfei222666-9/self-improving-loop/issues"
"Parent Project" = "https://github.com/yangfei222666-9/TaijiOS"

[tool.setuptools]
packages = ["self_improving_loop"]

[tool.setuptools.package-data]
self_improving_loop = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
