[project]
name = "taijios-soul"
version = "0.1.0"
description = "Give any AI product a soul — Five Generals + 4D Intent Mixing + 3-Layer Memory + Personality Evolution"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "TaijiOS Team" },
]
keywords = ["ai", "personality", "middleware", "soul", "taijios"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.24",
]

[project.optional-dependencies]
claude = ["anthropic>=0.20"]
all = ["anthropic>=0.20"]

[project.urls]
Homepage = "https://github.com/yangfei222666-9/TaijiOS"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taijios"]
